# yorubatts_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
yorubatts_bot/: __init__.py  __main__.py  translate.py  xtts.py  yorubatts_bot.py
