[tool.poetry]
name = "yorubatts-bot"
version = "0.1.0"
description = ""
authors = ["Damian Akpan <damiakpan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
whatsapp-framework = "^0.1.20"
modal = "^0.64.131"
google-generativeai = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
